--- a/stylesheets.css
+++ b/stylesheets.css
@@ -2,6 +2,7 @@ table, th, td {border: 1px solid black; text-align:center}
 h1, h2, h3, h4, h5, h6 {color:whitesmoke; font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; text-align:center;}
 body {background-color:rgb(21, 21, 24);}
 p {margin-top: 0; text-align:center; font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; color:rgb(163, 181, 199); font-size:large;}
+a {font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; color:rgb(163, 181, 199);}
 li {margin:10px 80px; text-align:left; font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; color:rgb(163, 181, 199); font-size:large;}
 .profile {background-color:darkslategray; width:100%; overflow:auto; display: flex;}
 .profile div {width:33%; float:left;}
@@ -12,9 +13,20 @@ img {float: left; width: 200px; height: auto; margin-left: 2%; border-radius: 12
 #contact {width:33%; float:left; }
 .skill {border: 2px solid rgb(163, 181, 199); border-radius: 10px; padding: 5px; width: 40%; margin:10px auto}
 
-
-
 #about {width: 66%; float:left; border-left: 4px solid whitesmoke;}
 .education {margin-bottom: 30px;}
 .edu1 {color:lightgrey; margin: auto 100px; font-weight:bold; text-align: left; font-size: 20px;}
 .edu2 {margin: auto 100px; font-weight:normal; text-align: left;}
+
+
+.job {width:100%}
+.years {width:20%; float:left;}
+.desc {width: 79%; float:left; border-left: 4px solid whitesmoke;}
+.company {color:whitesmoke; font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; text-align:left; margin-bottom:0px;}
+.role 	 {color:whitesmoke; font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; text-align:left;}
+
+#years {width:20%; float:left; }
+.range {margin-top: 0; padding-right: 10px; text-align:right; font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; color:rgb(163, 181, 199); font-size:medium;}
+.loc   {margin-top: 0; padding-right: 10px; text-align:right; font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; color:rgb(163, 181, 199); font-size:medium;}
+
+#work {width: 79%; float:left; border-left: 4px solid whitesmoke;}
