--- a/stylesheets.css
+++ b/stylesheets.css
@@ -24,6 +24,7 @@ img {float: left; width: 200px; height: auto; margin-left: 2%; border-radius: 12
 .desc {width: 79%; float:left; border-left: 4px solid whitesmoke;}
 .company {color:whitesmoke; font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; text-align:left; margin-bottom:0px;}
 .role 	 {color:whitesmoke; font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; text-align:left;}
+.exp  {margin: auto 100px; font-weight:normal; text-align: left;}
 
 #years {width:20%; float:left; }
 .range {margin-top: 0; padding-right: 10px; text-align:right; font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; color:rgb(163, 181, 199); font-size:medium;}
