--- a/stylesheets.css
+++ b/stylesheets.css
@@ -2,7 +2,7 @@ table, th, td {border: 1px solid black; text-align:center}
 h1, h2, h3, h4, h5, h6 {color:whitesmoke; font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; text-align:center;}
 body {background-color:rgb(21, 21, 24);}
 p {margin-top: 0; text-align:center; font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; color:rgb(163, 181, 199); font-size:large;}
-a {font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; color:rgb(163, 181, 199);}
+a {font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; color:rgb(163, 181, 199); font-size:small;}
 li {margin:10px 80px; text-align:left; font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; color:rgb(163, 181, 199); font-size:large;}
 .profile {background-color:darkslategray; width:100%; overflow:auto; display: flex;}
 .profile div {width:33%; float:left;}
