--- a/stylesheets.css
+++ b/stylesheets.css
@@ -9,6 +9,8 @@ li {margin:10px 80px; text-align:left; font-family:'Gill Sans', 'Gill Sans MT', 
 img {float: left; width: 200px; height: auto; margin-left: 2%; border-radius: 12px;}
 #name {width: 100%; text-align:center; font-size:30px; padding:10px}
 
+#links {background-color:antiquewhite; width: 100%; text-align:center; font-size:30px; padding:10px}
+
 .main {width:100%; overflow:auto; margin-top: 30px;}
 #contact {width:33%; float:left; }
 .skill {border: 2px solid rgb(163, 181, 199); border-radius: 10px; padding: 5px; width: 40%; margin:10px auto}
