--- a/stylesheets.css
+++ b/stylesheets.css
@@ -1,66 +1,224 @@
-table, th, td {border: 1px solid black; text-align:center}
-h1, h2, h3, h4, h5, h6 {color:whitesmoke; font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; text-align:center;}
-body {background-color:rgb(21, 21, 24);}
-p {margin-top: 0; text-align:center; font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; color:rgb(163, 181, 199); font-size:22px;}
-a {font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; color:rgb(3, 41, 79); font-size:20px; text-align: center; padding: 0 3px; transition: background-color 0.2s, color 0.2s;}
-a:hover {color:rgb(163, 181, 199); background-color: rgb(48, 80, 112); }
-li {margin:10px 80px; text-align:left; font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; color:rgb(163, 181, 199); font-size:22px;}
-.profile {background-color:rgb(47, 79, 79); display:flex; flex-direction: column;}
-.header {display:flex; padding: 20px;}
-img {width: 200px; height: auto; margin-left: 2%; border-radius: 12px;}
-#name {width: 100%; text-align:center; font-size:30px;}
+table,
+th,
+td {
+  border: 1px solid black;
+  text-align: center;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: whitesmoke;
+  font-family:
+    "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  text-align: center;
+}
+body {
+  background-color: rgb(21, 21, 24);
+}
+p {
+  margin-top: 0;
+  text-align: center;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  color: rgb(163, 181, 199);
+  font-size: 22px;
+}
+a {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  color: rgb(3, 41, 79);
+  font-size: 20px;
+  text-align: center;
+  padding: 0 3px;
+  transition:
+    background-color 0.2s,
+    color 0.2s;
+}
+a:hover {
+  color: rgb(163, 181, 199);
+  background-color: rgb(48, 80, 112);
+}
+li {
+  margin: 10px 80px;
+  text-align: left;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  color: rgb(163, 181, 199);
+  font-size: 22px;
+}
+.profile {
+  background-color: rgb(47, 79, 79);
+  display: flex;
+  flex-direction: column;
+}
+.header {
+  display: flex;
+  padding: 20px;
+}
+img {
+  width: 200px;
+  height: auto;
+  margin-left: 2%;
+  border-radius: 12px;
+}
+#name {
+  width: 100%;
+  text-align: center;
+  font-size: 30px;
+}
 
-#links {background-color:antiquewhite; text-align:center; display: flex; justify-content: space-around; padding: 10px 0;}
+#links {
+  background-color: antiquewhite;
+  text-align: center;
+  display: flex;
+  justify-content: space-around;
+  padding: 10px 0;
+}
 
-.main {width:100%; overflow:auto; margin: 30px 0;}
-#contact {width:33%; float:left;padding: 40px 0; }
-.geninfoh {text-decoration: underline whitesmoke 3px; font-size: 25px;}
-.skill {color:rgb(21, 21, 24); border: 2px solid rgb(163, 181, 199); border-radius: 10px; padding: 5px; width: 40%; margin:10px auto; background-color: rgb(163, 181, 199);}
-#prog {display: flex; text-align: center; justify-content: space-evenly;}
-.lang {text-align: right;}
-.lang_score {text-align: left;}
+.main {
+  width: 100%;
+  overflow: auto;
+  margin: 30px 0;
+}
+#contact {
+  width: 33%;
+  float: left;
+  padding: 40px 0;
+}
+.geninfoh {
+  text-decoration: underline whitesmoke 3px;
+  font-size: 25px;
+}
+.geninfop {
+  word-wrap: break-word;
+}
+.skill {
+  color: rgb(21, 21, 24);
+  border: 2px solid rgb(163, 181, 199);
+  border-radius: 10px;
+  padding: 5px;
+  width: 40%;
+  margin: 10px auto;
+  background-color: rgb(163, 181, 199);
+}
+#prog {
+  display: flex;
+  text-align: center;
+  justify-content: space-evenly;
+}
+.lang {
+  text-align: right;
+}
+.lang_score {
+  text-align: left;
+}
 
-
-#about {display: flex; flex-direction: column; border-left: 4px solid whitesmoke;} 
-.education {margin-bottom: 30px;}
-.edu1 {color:lightgrey; margin: auto 100px; font-weight:bold; text-align: left; font-size: 20px;}
-.edu2 {margin: auto 100px; font-weight:normal; text-align: left;}
+#about {
+  display: flex;
+  flex-direction: column;
+  border-left: 4px solid whitesmoke;
+}
+.education {
+  margin-bottom: 30px;
+}
+.edu1 {
+  color: lightgrey;
+  margin: auto 100px;
+  font-weight: bold;
+  text-align: left;
+  font-size: 20px;
+}
+.edu2 {
+  margin: auto 100px;
+  font-weight: normal;
+  text-align: left;
+}
 
 
 /*==EXPERIENCE.HTML==*/
-.main_work {width:100%; overflow:auto; margin: 30px 0; display:flex; flex-direction: column; gap: 80px;}
-
-.job {width:100%; display:flex;}
-.years {width:30%; float:left; background-color: rgb(28,36,38);}
-.desc {width: 69%; float:left; border-left: 4px solid whitesmoke; padding-left: 10px;}
-.company {color:whitesmoke; font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; text-align:left; margin-bottom:0px; font-size: 60px;}
-.role 	 {color:whitesmoke; font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; text-align:left;}
-.exp  {font-weight:normal; text-align: left; margin: 3px 0; padding: 0; }
-
-#years {width:20%; float:left; }
-.range {margin-top: 0; padding-right: 10px; text-align:right; font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; color:rgb(163, 181, 199); font-size:20px;}
-.loc   {margin-top: 0; padding-right: 10px; text-align:right; font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; color:rgb(163, 181, 199); font-size:20px;}
-
-#work {width: 79%; float:left; border-left: 4px solid whitesmoke;}
-
-.timeline-circle {
-    width: 80px;                  /* circle size */
-    height: 80px;
-    background-color: antiquewhite;
-    border: 8px solid rgb(163,181,199); /* optional border for style */
-    border-radius: 100%;           /* makes it a circle */
-    margin: 0 400px; padding: 0;
-                      /* adjust vertically for alignment */
+.main_work {
+  width: 100%;
+  overflow: auto;
+  margin: 30px 0;
+  display: flex;
+  flex-direction: column;
+  gap: 0px;
 }
 
-.timeline-circle2 {
-    width: 80px;                  /* circle size */
-    height: 80px;
-    background-color: antiquewhite;
-    border: 8px solid rgb(163,181,199); /* optional border for style */
-    border-radius: 50%;           /* makes it a circle */
-    
-    position: absolute;           /* positioning */
-    left: 525px;                      /* aligns with the start of the years column */
-    top: 865px;                    /* adjust vertically for alignment */
+.job {
+  width: 100%;
+  display: flex;
+}
+.years {
+  width: 30%;
+  float: left;
+  background-color: rgb(28, 36, 38);
+}
+.desc {
+  width: 69%;
+  float: left;
+  border-left: 4px solid whitesmoke;
+  padding-left: 10px;
+}
+.company {
+  color: whitesmoke;
+  font-family:
+    "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  text-align: left;
+  margin-bottom: 0px;
+  font-size: 60px;
+}
+.role {
+  color: whitesmoke;
+  font-family:
+    "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  text-align: left;
+}
+.exp {
+  font-weight: normal;
+  text-align: left;
+  margin: 3px 0;
+  padding: 0;
+}
+
+#years {
+  width: 20%;
+  float: left;
+}
+.range {
+  margin-top: 0;
+  padding-right: 10px;
+  text-align: right;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  color: rgb(163, 181, 199);
+  font-size: 20px;
+}
+.loc {
+  margin-top: 0;
+  padding-right: 10px;
+  text-align: right;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  color: rgb(163, 181, 199);
+  font-size: 20px;
+}
+
+#work {
+  width: 79%;
+  float: left;
+  border-left: 4px solid whitesmoke;
+}
+
+.timeline-circle {
+  width: 40px;
+  height: 40px;
+  background-color: antiquewhite;
+  border: 4px solid rgb(163, 181, 199);
+  border-radius: 100%;
+  margin: 0;
+  padding: 0;
+  position: relative;
+  left: calc(30% - 24px);
 }
